--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
+    "express-validator": "^6.14.1",
     "markdown-it": "^12.3.2"
   },
   "devDependencies": {
